// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarItem collapsible menu is expanded when one of the children is selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PageSidebar-root PageSidebar-light PageSidebar-medium PageSidebar-hamburgerNotAvailable"
    >
      <div
        class="PageSidebar-wrapper PageSidebar-sticky"
      >
        <div
          class="flex flex-col PageSidebar-scrollableContent"
        >
          <div
            class="PageSidebar-spacer"
          />
          <ul
            class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
            role="menu"
            tabindex="-1"
          >
            <div
              class="MuiPaper-root MuiAccordion-root PicassoAccordion-root PicassoAccordion-bordersNone Mui-expanded MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root PicassoAccordion-summary PicassoSidebarItemAccordion-collapsibleWrapper Mui-expanded"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content PicassoAccordion-content PicassoSidebarItemAccordion-content Mui-expanded"
                >
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoSidebarItemHeader-collapsible PicassoMenuItem-nonSelectable MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    role="menuitem"
                    tabindex="0"
                  >
                    <div
                      class="flex PicassoMenuItem-itemWrapper"
                    >
                      <div
                        class="flex flex-col PicassoMenuItem-content"
                      >
                        <div
                          class="items-center flex"
                        >
                          <div
                            class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                          >
                            <div
                              class="items-center flex PicassoSidebarItemContent-noWrap"
                            >
                              <p
                                class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                              >
                                Test item
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                  <svg
                    class="PicassoSvgArrowDownMinor16-root PicassoSidebarItemAccordion-expandIcon PicassoSidebarItemAccordion-lightExpandIcon PicassoAccordion-expandIcon PicassoAccordion-expandIconExpanded"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root"
                style="min-height: 0px; height: 0px; transition-duration: 0ms;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root PicassoAccordionDetails-root PicassoAccordion-details"
                      >
                        <ul
                          class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
                          role="menu"
                          tabindex="-1"
                        >
                          <li
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoSidebarItemHeader-nestedMenu PicassoSidebarItemHeader-selected PicassoMenuItem-nonSelectable Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
                            role="menuitem"
                            tabindex="0"
                          >
                            <div
                              class="flex PicassoMenuItem-itemWrapper"
                            >
                              <div
                                class="flex flex-col PicassoMenuItem-content"
                              >
                                <div
                                  class="items-center flex"
                                >
                                  <div
                                    class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                                  >
                                    <div
                                      class="items-center flex PicassoSidebarItemContent-noWrap"
                                    >
                                      <p
                                        class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                                      >
                                        Menu item
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem collapsible menu is expanded when one of the children is selected and subMenu has a wrapper component 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PageSidebar-root PageSidebar-light PageSidebar-medium PageSidebar-hamburgerNotAvailable"
    >
      <div
        class="PageSidebar-wrapper PageSidebar-sticky"
      >
        <div
          class="flex flex-col PageSidebar-scrollableContent"
        >
          <div
            class="PageSidebar-spacer"
          />
          <ul
            class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
            role="menu"
            tabindex="-1"
          >
            <div
              class="MuiPaper-root MuiAccordion-root PicassoAccordion-root PicassoAccordion-bordersNone Mui-expanded MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root PicassoAccordion-summary PicassoSidebarItemAccordion-collapsibleWrapper Mui-expanded"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content PicassoAccordion-content PicassoSidebarItemAccordion-content Mui-expanded"
                >
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoSidebarItemHeader-collapsible PicassoMenuItem-nonSelectable MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    role="menuitem"
                    tabindex="0"
                  >
                    <div
                      class="flex PicassoMenuItem-itemWrapper"
                    >
                      <div
                        class="flex flex-col PicassoMenuItem-content"
                      >
                        <div
                          class="items-center flex"
                        >
                          <div
                            class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                          >
                            <div
                              class="items-center flex PicassoSidebarItemContent-noWrap"
                            >
                              <p
                                class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                              >
                                Test item
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                  <svg
                    class="PicassoSvgArrowDownMinor16-root PicassoSidebarItemAccordion-expandIcon PicassoSidebarItemAccordion-lightExpandIcon PicassoAccordion-expandIcon PicassoAccordion-expandIconExpanded"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root"
                style="min-height: 0px; height: 0px; transition-duration: 0ms;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root PicassoAccordionDetails-root PicassoAccordion-details"
                      >
                        <ul
                          class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
                          role="menu"
                          tabindex="-1"
                        >
                          <li
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoSidebarItemHeader-nestedMenu PicassoSidebarItemHeader-selected PicassoMenuItem-nonSelectable Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
                            role="menuitem"
                            tabindex="0"
                          >
                            <div
                              class="flex PicassoMenuItem-itemWrapper"
                            >
                              <div
                                class="flex flex-col PicassoMenuItem-content"
                              >
                                <div
                                  class="items-center flex"
                                >
                                  <div
                                    class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                                  >
                                    <div
                                      class="items-center flex PicassoSidebarItemContent-noWrap"
                                    >
                                      <p
                                        class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                                      >
                                        Menu item
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem don't use accordion for non-collapsible with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoMenuItem-nonSelectable MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex PicassoMenuItem-itemWrapper"
      >
        <div
          class="flex flex-col PicassoMenuItem-content"
        >
          <div
            class="items-center flex"
          >
            <div
              class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
            >
              <svg
                class="PicassoSvgCandidates16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                />
              </svg>
              <div
                class="items-center flex PicassoSidebarItemContent-noWrap PicassoSidebarItemContent-withIcon"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <div>
      <ul
        class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoSidebarItemHeader-nestedMenuWithIcon PicassoMenuItem-nonSelectable MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="flex PicassoMenuItem-itemWrapper"
          >
            <div
              class="flex flex-col PicassoMenuItem-content"
            >
              <div
                class="items-center flex"
              >
                <div
                  class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                >
                  <div
                    class="items-center flex PicassoSidebarItemContent-noWrap"
                  >
                    <p
                      class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                    >
                      Menu item
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`SidebarItem is selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoSidebarItemHeader-selected PicassoMenuItem-nonSelectable Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex PicassoMenuItem-itemWrapper"
      >
        <div
          class="flex flex-col PicassoMenuItem-content"
        >
          <div
            class="items-center flex"
          >
            <div
              class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
            >
              <svg
                class="PicassoSvgCandidates16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                />
              </svg>
              <div
                class="items-center flex PicassoSidebarItemContent-noWrap PicassoSidebarItemContent-withIcon"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`SidebarItem renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoMenuItem-nonSelectable MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex PicassoMenuItem-itemWrapper"
      >
        <div
          class="flex flex-col PicassoMenuItem-content"
        >
          <div
            class="items-center flex"
          >
            <div
              class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
            >
              <div
                class="items-center flex PicassoSidebarItemContent-noWrap"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`SidebarItem use accordion for collapsible with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiAccordion-root PicassoAccordion-root PicassoAccordion-bordersNone MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root PicassoAccordion-summary PicassoSidebarItemAccordion-collapsibleWrapper"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content PicassoAccordion-content PicassoSidebarItemAccordion-content"
        >
          <li
            aria-disabled="false"
            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoSidebarItemHeader-collapsible PicassoMenuItem-nonSelectable MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            role="menuitem"
            tabindex="-1"
          >
            <div
              class="flex PicassoMenuItem-itemWrapper"
            >
              <div
                class="flex flex-col PicassoMenuItem-content"
              >
                <div
                  class="items-center flex"
                >
                  <div
                    class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                  >
                    <svg
                      class="PicassoSvgCandidates16-root"
                      style="min-width: 16px; min-height: 16px;"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                      />
                    </svg>
                    <div
                      class="items-center flex PicassoSidebarItemContent-noWrap PicassoSidebarItemContent-withIcon"
                    >
                      <p
                        class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                      >
                        Test item
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <svg
            class="PicassoSvgArrowDownMinor16-root PicassoSidebarItemAccordion-expandIcon PicassoSidebarItemAccordion-lightExpandIcon PicassoAccordion-expandIcon"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root PicassoAccordionDetails-root PicassoAccordion-details"
              >
                <ul
                  class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
                  role="menu"
                  tabindex="-1"
                >
                  <li
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoSidebarItemHeader-nestedMenuWithIcon PicassoMenuItem-nonSelectable MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    role="menuitem"
                    tabindex="0"
                  >
                    <div
                      class="flex PicassoMenuItem-itemWrapper"
                    >
                      <div
                        class="flex flex-col PicassoMenuItem-content"
                      >
                        <div
                          class="items-center flex"
                        >
                          <div
                            class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                          >
                            <div
                              class="items-center flex PicassoSidebarItemContent-noWrap"
                            >
                              <p
                                class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                              >
                                Menu item
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem with icon 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light PicassoSidebarItemHeader-root PicassoSidebarItemHeader-noWrap PicassoSidebarItemHeader-light PicassoMenuItem-nonSelectable MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex PicassoMenuItem-itemWrapper"
      >
        <div
          class="flex flex-col PicassoMenuItem-content"
        >
          <div
            class="items-center flex"
          >
            <div
              class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
            >
              <svg
                class="PicassoSvgCandidates16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                />
              </svg>
              <div
                class="items-center flex PicassoSidebarItemContent-noWrap PicassoSidebarItemContent-withIcon"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;
